device modification feature done
