# SwiftSurfingServer/SwiftSurfingServer/Sources/App/Services/Interfaces/IHomeService.swift
@@ -10,6 +10,8 @@ import Foundation
 protocol IHomeService {
     func getHomeConfigurations(couchId: String?) async throws -> [HomeConfiguration]
     
+    func getHomeConfiguration(configurationId: String?) async throws -> HomeConfiguration?
+    
     func switchItem(configurationId: String?) async throws -> HomeConfiguration
     
     func addHomeConfiguration(configuration: HomeConfiguration) async throws -> Bool
@@ -19,4 +21,8 @@ protocol IHomeService {
     func getConfigurationTypeProperties() async throws -> [Channel]
     
     func saveItems(configurationName: String, items: [Item]) async throws -> Bool
+    
+    func getItemsByHomeConfiguration(configurationId: String?) async throws -> [Item]
+    
+    func setItemState(item: Item) async throws -> Bool
 }
